--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.6",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "react": "18.2.0",
     "react-native": "0.72.5",
